--- a/index.html
+++ b/index.html
@@ -3,9 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="style.css">
+    <title>About Me</title>
 </head>
 <body>
+    <div class="header">
+        <h1>About Me</h1>
+        <div class="links">
+            <li>Test</li>
+            <li>Test1</li>
+            <li>Test2</li>
+            <li>Test3</li>
+        </div>
+    </div>
     <p>This is a Test!</p>
 </body>
 </html>
